@startuml
class User{
    Username: String
    Password: String
    Email: String
}

class Admin extends User{
}

class Student extends User{
}

class University{
    Name: String
    Acronym: String
    Country: String
    City: String
}

class Degree{
    Name: String
    Faculty:String
}

class Subject{
    Name: String
    Course: Integer
    Optional: Boolean
}

class Resources{
    Name: String
    Description: String
    File: String
    ResourceType: ResourceType
}

class Rating{
    Rating: BigDecimal
    Comment: String
}


Student "1" -- "*" Resources: Manages >
Student "1" -- "*" Rating: Manages >
Admin "*" --left-- "*" University: Manages >
Admin "*" --left-- "*" Degree: Manages >
Admin "*" --left-- "*" Subject: Manages >
Admin "*" -- "*" Resources: Deletes >
Admin "*" -- "*" Rating: Deletes >
Rating "*" -- "1" Resources: Belongs >
Resources "*" -- "1-*" Subject: Belongs >
Subject "*" -- "*" Degree: Belongs >
Degree "*" -- "1" University: Belongs >
@enduml